--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "engines": {
     "node": ">= 0.12.0"
   },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
   "scripts": {
     "test": "npm run jshint && npm run mocha",
     "jshint": "jshint src/. test/. --config",
@@ -22,6 +27,9 @@
     "mocha": "mocha test/ --recursive"
   },
   "dependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "bcrypt-as-promised": "^1.1.0",
     "body-parser": "^1.17.0",
     "compression": "^1.6.2",
     "cors": "^2.8.1",
@@ -33,6 +41,10 @@
     "feathers-mongoose": "^3.6.2",
     "feathers-rest": "^1.7.1",
     "feathers-socketio": "^1.5.2",
+    "graphql": "^0.9.1",
+    "graphql-server-express": "^0.6.0",
+    "graphql-tools": "^0.10.1",
+    "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.8.5",
     "passport": "^0.3.2",
     "serve-favicon": "^2.4.1",
