--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "babel-cli": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
+    "babel-register": "^6.7.2",
     "bcrypt-as-promised": "^1.1.0",
     "body-parser": "^1.17.0",
     "compression": "^1.6.2",
