--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "feathers-hooks": "^1.8.1",
     "feathers-mongoose": "^3.6.2",
     "feathers-rest": "^1.7.1",
+    "feathers-seeder": "^1.0.7",
     "feathers-socketio": "^1.5.2",
     "graphql": "^0.9.1",
     "graphql-server-express": "^0.6.0",
